--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,6 @@
   <head></head>
   <body>
     <div id="app"></div>
-    <script src="./src/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
