--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html> <html> <head></head> <body> <div id="app"></div> <script src="/src.b2413090.js"></script> </body> </html> 
+<!doctype html> <html> <head></head> <body> <div id="app"></div> <script src="/weld-assignment/src.b2413090.js"></script> </body> </html> 
